--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,9 @@
+/* general and home styles */
+
+body {
+    overflow-x: hidden;
+}
+
 .navbar .nav-link {
     font-size: 14px;
     text-transform: uppercase;
@@ -57,4 +63,20 @@
 
 #video-play a {
     color: #fff;
+}
+
+/* about page styles */
+
+#page-header {
+    height: 200px;
+    background: url('../img/image1.jpg');
+    background-position: 0 -360px;
+    background-attachment: fixed;
+    color: #fff;
+    border-bottom: 1px #eee solid;
+    padding-top: 50px;
+}
+
+.about-img {
+    margin-top: -50px;
 }
