--- a/css/style.css
+++ b/css/style.css
@@ -80,3 +80,19 @@ body {
 .about-img {
     margin-top: -50px;
 }
+
+/* services page styles */
+
+#faq .card {
+    border: #444;
+}
+
+#faq a {
+    color: #fff;
+    text-decoration: none;
+}
+
+#faq .card-body,
+#faq .card-header {
+    background: #333;
+}
